@@ -1,3 +1,12 @@
+2002-08-21 13:50  Alexander Malmberg  <alexander@malmberg.org>
+
+	* Source/art/ARTContext.m: Move common code from _fill and DPSstroke
+	to convert the current path to an ArtVpath to a new method. Update
+	callers.
+
+	(-compositerect:op:): Create alpha buffer for NSCompositeCopy
+	if the current color isn't completely opaque.
+
 2002-08-21  Alexander Malmberg  <alexander@malmberg.org>
 
 	* Source/art/ARTContext.m: ([WinImage -_exposeRect:]) Guard against
